# Yagram

backend/: .env  .gitignore  Cargo.toml  docker-compose.dev.yml
backend/entity/: Cargo.toml
backend/entity/src/: lib.rs  user.rs
backend/kafka-client/src/: lib.rs  message_consumer.rs  message_producer.rs
backend/libs/entity/src/: mod.rs  prelude.rs
backend/libs/kafka-client/: Cargo.toml
backend/libs/kafka-client/src/: lib.rs  message_consumer.rs  message_producer.rs
backend/libs/kafka-messages/: Cargo.toml  readme.md
backend/libs/kafka-messages/src/: lib.rs  status_message.rs  user_message.rs
backend/libs/migration/src/: m20220101_000001_create_table.rs  m20221214_235906_add_users_sub.rs
backend/message-handler-service/: Cargo.toml  dev.Dockerfile
backend/message-handler-service/src/: main.rs  message_processor.rs
backend/migration/src/: lib.rs  m20221130_230058_rename_users_table.rs
backend/services/message-handler-service/: Cargo.toml  dev.Dockerfile
backend/services/message-handler-service/src/: message_processor.rs
backend/services/socket-service/: Cargo.toml  dev.Dockerfile
backend/services/socket-service/src/: main.rs  messages.rs  server.rs  session.rs
backend/services/user-status-service/src/: main.rs
backend/services/yagram-core/: Cargo.toml
backend/services/yagram-core/src/: errors.rs  lib.rs  telemetry.rs
backend/services/yagram-core/src/app_data/: app_state.rs
backend/services/yagram-core/src/app_settings/: mod.rs
backend/services/yagram-core/src/domains/auth/: jwks_store.rs
backend/services/yagram-core/src/domains/messages/: handlers.rs
backend/services/yagram-core/src/domains/users/: mod.rs  mutations.rs
backend/socket-service/: Cargo.toml
backend/socket-service/src/: main.rs  messages.rs  server.rs  session.rs
backend/src/: main.rs
backend/user-status-service/: Cargo.toml
backend/yagram-core/: Cargo.toml
backend/yagram-core/src/: app_settings.example.toml  app_settings.rs  app_state.rs  auth.rs  errors.rs  lib.rs
backend/yagram-core/src/app_data/: mod.rs
backend/yagram-core/src/auth/: handlers.rs  jwt_validation.rs  mod.rs
backend/yagram-core/src/domains/: mod.rs
backend/yagram-core/src/domains/auth/: handlers.rs  jwt_user_payload.rs  mod.rs  validator.rs
backend/yagram-core/src/domains/users/: handlers.rs  mutations.rs  queries.rs
frontend/: package-lock.json  package.json
frontend/pages/: index.tsx
frontend/pages/components/chat/: Chat.module.css  Chat.tsx  chat2.tsx  mockMessages.tsx
frontend/pages/components/contacts/: Contact.module.css  Contact.tsx  ContactElement.tsx  Search.jsx  Search.module.css
frontend/pages/components/header/: GreetUser.jsx  GreetUser.module.css  IconUser.jsx  IconUser.module.css  MenuButton.jsx  MenuButton.module.css
frontend/styles/: Home.module.css  globals.css
