[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migration", "entity", "yagram-core", "user-status-service", "socket-service"]

[dependencies]
oauth2 = "4.3.0"
yagram-core = { path = "yagram-core" }
