# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["services/*", "libs/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Konstantin Yakushin", "Maxim Yakushin"]
description = "Workspace for Yagram Backend"

[workspace.dependencies]
serde = { version = "^1.0.147", features = ["derive"] }
serde_json = "^1.0.89"
