[package]
name = "yagram-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4", features = ["openssl"] }
actix-web-httpauth = "0.8.0"
entity = { path = "../entity" }
migration = { path = "../migration" }
tracing-subscriber = "^0.3.16"
serde = "^1.0.147"
derive_more = "^0.99.17"
dotenv = "0.15.0"
openssl = "0.10.43"

[dependencies.sea-orm]
version = "^0.10.4" # sea-orm version
features = [
    "debug-print",
    "runtime-actix-native-tls",
    "sqlx-postgres",
    "macros",
    "mock",
]
