[package]
name = "yagram-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
actix-web = { version = "^4", features = ["openssl", "cookies", "secure-cookies"] }
actix-web-httpauth = "0.8.0"
actix-session = { version = "0.7.2", features = ["redis-actor-session"] }
actix-redis = "0.12.0"
actix-settings = "0.6.0"
tracing-subscriber = "^0.3.16"
serde = "^1.0.147"
strum = "0.24"
strum_macros = "0.24"
dotenv = "0.15.0"
openssl = "0.10.43"
oauth2 = "4.3.0"
jwt-simple = "0.11.2"
alcoholic_jwt = "4091.0.0"
reqwest = { version = "0.11.13", features = ["json"] }

[dependencies.sea-orm]
version = "^0.10.4" # sea-orm version
features = [
    "debug-print",
    "runtime-actix-native-tls",
    "sqlx-postgres",
    "macros",
    "mock",
]
