[package]
name = "socket-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix = "0.13.0"
actix-web-actors = "4.1.0"
actix-broker = "0.4.3"
serde = "^1.0.147"
serde_json = "^1.0.89"
kafka-client = { path = "../../libs/kafka-client" }
